--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#FFA447">
   <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <style>
+    body {
+      background-image: url('imagen/fondo.png'); /* Imagen de fondo */
+      background-size: cover;
+      background-position: center;
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen relative overflow-x-hidden">
+<body class="text-white flex flex-col items-center justify-center min-h-screen relative overflow-x-hidden">
 
   <!-- Botón de menú -->
   <div class="absolute top-4 right-4 z-50">
@@ -61,9 +68,12 @@
   </div>
 
   <!-- Slider de volumen -->
-  <div class="w-64 mb-6">
+  <div class="w-11/12 mb-6"> <!-- Aumentamos el ancho de la barra -->
     <label for="volumeSlider" class="block text-center mb-2">Volumen</label>
-    <input type="range" id="volumeSlider" min="0" max="1" step="0.01" class="w-full accent-[#FFA447]">
+    <div class="flex justify-between items-center">
+      <input type="range" id="volumeSlider" min="0" max="1" step="0.01" class="w-full accent-[#FFA447] h-8"> <!-- Aumentamos la altura del slider -->
+      <span id="volumeLabel" class="ml-4 text-lg">0%</span> <!-- Aquí se mostrará el porcentaje -->
+    </div>
   </div>
 
   <!-- Botón de reproducción -->
@@ -86,6 +96,7 @@
     const audio = document.getElementById('audio');
     const volumeSlider = document.getElementById('volumeSlider');
     const shareBtn = document.getElementById('shareBtn');
+    const volumeLabel = document.getElementById('volumeLabel');
 
     let isPlaying = false;
 
@@ -94,6 +105,7 @@
     if (savedVolume !== null) {
       audio.volume = parseFloat(savedVolume);
       volumeSlider.value = savedVolume;
+      volumeLabel.textContent = `${Math.round(savedVolume * 100)}%`;
     }
 
     menuBtn.addEventListener('click', () => {
@@ -115,6 +127,7 @@
 
     volumeSlider.addEventListener('input', () => {
       audio.volume = volumeSlider.value;
+      volumeLabel.textContent = `${Math.round(volumeSlider.value * 100)}%`;
       localStorage.setItem('radioVolume', volumeSlider.value);
     });
 
@@ -193,9 +206,9 @@
 
     // Service Worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/genap.github.io/sw.js')
-        .then(reg => console.log('SW registrado:', reg))
-        .catch(err => console.error('SW fallo:', err));
+      navigator.serviceWorker.register('/sw.js')
+        .then(() => console.log('Service Worker registrado'))
+        .catch((error) => console.log('Error en registro de Service Worker', error));
     }
   </script>
 </body>
