--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="/icons/icon-192.png">
   <style>
     body {
-      background-image: url('imagen/fondo.png'); /* Imagen de fondo */
+      background-image: url('imagen/fondo.png');
       background-size: cover;
       background-position: center;
     }
@@ -19,72 +19,68 @@
 </head>
 <body class="text-white flex flex-col items-center justify-center min-h-screen relative overflow-x-hidden">
 
-  <!-- Botón de menú -->
   <div class="absolute top-4 right-4 z-50">
-    <button id="menuBtn" class="text-white text-2xl focus:outline-none">
+    <button id="menuBtn" class="text-white text-2xl focus:outline-none transform transition-transform duration-300 ease-in-out hover:rotate-180">
       <i class="fas fa-bars"></i>
     </button>
   </div>
 
-  <!-- Botón de compartir -->
   <div class="absolute top-4 left-4 z-30">
-    <button id="shareBtn" class="w-16 h-16 bg-blue-500 hover:bg-blue-600 text-white rounded-full shadow-lg text-2xl flex items-center justify-center focus:outline-none transition-all">
+    <button id="shareBtn" class="w-16 h-16 bg-blue-500 hover:bg-blue-600 text-white rounded-full shadow-lg text-2xl flex items-center justify-center focus:outline-none transition-all transform hover:scale-110">
       <i class="fas fa-share-alt"></i>
     </button>
   </div>
 
-  <!-- Contenedor para botón de instalar PWA -->
   <div id="installContainer" class="absolute bottom-4 right-4 z-50"></div>
 
-  <!-- Menú lateral -->
   <div id="menuPanel" class="fixed top-0 left-0 h-full w-64 bg-gray-800 text-white transform -translate-x-full transition-transform duration-300 z-40 shadow-lg p-6 space-y-4">
     <h2 class="text-xl font-semibold mb-4">Redes Sociales</h2>
-    <a href="https://www.facebook.com/RadioGenApCristiana" target="_blank" class="flex items-center space-x-2 text-white bg-[#1877F2] hover:bg-[#145dbf] px-4 py-2 rounded">
+    <a href="https://www.facebook.com/RadioGenApCristiana" target="_blank" class="flex items-center space-x-2 text-white bg-[#1877F2] hover:bg-[#145dbf] px-4 py-2 rounded transition-colors">
       <i class="fab fa-facebook"></i><span>Facebook</span>
     </a>
-    <a href="https://x.com/RadioTvGenAp" target="_blank" class="flex items-center space-x-2 text-white bg-[#1DA1F2] hover:bg-[#0d8ddb] px-4 py-2 rounded">
+    <a href="https://x.com/RadioTvGenAp" target="_blank" class="flex items-center space-x-2 text-white bg-[#1DA1F2] hover:bg-[#0d8ddb] px-4 py-2 rounded transition-colors">
       <i class="fab fa-twitter"></i><span>Twitter</span>
     </a>
-    <a href="https://www.instagram.com/radiogenapcristiana" target="_blank" class="flex items-center space-x-2 text-white bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 hover:brightness-110 px-4 py-2 rounded">
+    <a href="https://www.instagram.com/radiogenapcristiana" target="_blank" class="flex items-center space-x-2 text-white bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 hover:brightness-110 px-4 py-2 rounded transition-all">
       <i class="fab fa-instagram"></i><span>Instagram</span>
     </a>
-    <a href="https://www.youtube.com/luisbuenotv" target="_blank" class="flex items-center space-x-2 text-white bg-[#FF0000] hover:bg-[#cc0000] px-4 py-2 rounded">
+    <a href="https://www.youtube.com/luisbuenotv" target="_blank" class="flex items-center space-x-2 text-white bg-[#FF0000] hover:bg-[#cc0000] px-4 py-2 rounded transition-all">
       <i class="fab fa-youtube"></i><span>YouTube</span>
     </a>
-    <a href="https://www.tiktok.com/@radiogenapcristiana" target="_blank" class="flex items-center space-x-2 text-white bg-[#000000] hover:bg-[#1c1c1c] px-4 py-2 rounded">
+    <a href="https://www.tiktok.com/@radiogenapcristiana" target="_blank" class="flex items-center space-x-2 text-white bg-[#000000] hover:bg-[#1c1c1c] px-4 py-2 rounded transition-all">
       <i class="fab fa-tiktok"></i><span>TikTok</span>
     </a>
-    <a href="https://paypal.me/cantanteluisbueno?country.x=MX&locale.x=es_XC" target="_blank" class="flex items-center space-x-2 text-white bg-[#0070ba] hover:bg-[#005ea6] px-4 py-2 rounded">
+    <a href="https://paypal.me/cantanteluisbueno?country.x=MX&locale.x=es_XC" target="_blank" class="flex items-center space-x-2 text-white bg-[#0070ba] hover:bg-[#005ea6] px-4 py-2 rounded transition-all">
       <i class="fab fa-paypal"></i><span>PAYPAL</span>
     </a>
-    <a href="https://vaughn.live/radiogenap" target="_blank" class="flex items-center space-x-2 text-white bg-[#FF0000] hover:bg-[#cc0000] px-4 py-2 rounded">
+    <a href="https://vaughn.live/radiogenap" target="_blank" class="flex items-center space-x-2 text-white bg-[#FF0000] hover:bg-[#cc0000] px-4 py-2 rounded transition-all">
       <i class="fas fa-tv"></i><span>TV En Vivo</span>
     </a>
   </div>
 
-  <!-- Logo -->
   <div class="mt-2 mb-6">
-    <img src="imagen/Logo GenAp.png" alt="Logo Radio" class="w-80 h-80 object-contain rounded-full shadow-lg">
+    <img src="imagen/Logo GenAp.png" alt="Logo Radio" class="w-80 h-80 object-contain rounded-full shadow-lg transition-transform transform hover:scale-105">
   </div>
 
-  <!-- Slider de volumen -->
-  <div class="w-11/12 mb-6"> <!-- Aumentamos el ancho de la barra -->
-    <label for="volumeSlider" class="block text-center mb-2">Volumen</label>
+  <div class="text-center mb-4">
+    <h3 id="songTitle" class="text-xl font-semibold"></h3>
+    <p id="songArtist" class="text-lg"></p>
+  </div>
+
+  <div class="w-11/12 mb-6">
+    <label for="volumeSlider" class="block text-center mb-2"></label>
     <div class="flex justify-between items-center">
-      <input type="range" id="volumeSlider" min="0" max="1" step="0.01" class="w-full accent-[#FFA447] h-8"> <!-- Aumentamos la altura del slider -->
-      <span id="volumeLabel" class="ml-4 text-lg">0%</span> <!-- Aquí se mostrará el porcentaje -->
+      <input type="range" id="volumeSlider" min="0" max="1" step="0.01" class="w-full accent-[#FFA447] h-8">
+      <span id="volumeLabel" class="ml-4 text-lg">0%</span>
     </div>
   </div>
 
-  <!-- Botón de reproducción -->
-  <button id="playBtn" class="w-16 h-16 bg-[#FFA447] hover:bg-[#FFA447] text-white rounded-full shadow-lg text-2xl flex items-center justify-center focus:outline-none transition-all">
+  <button id="playBtn" class="w-16 h-16 bg-[#FFA447] hover:bg-[#FFA447] text-white rounded-full shadow-lg text-2xl flex items-center justify-center focus:outline-none transition-all transform hover:scale-110">
     <i class="fas fa-play"></i>
   </button>
 
-  <!-- Audio -->
   <audio id="audio" src="https://stream.zeno.fm/ajnldia1z5utv"></audio>
 
-  <!-- Ticker de noticias -->
   <div class="absolute bottom-0 w-full bg-gray-800 overflow-hidden">
     <div id="newsContent" class="whitespace-nowrap animate-marquee py-2 px-4 text-sm text-yellow-400 flex gap-x-6"></div>
   </div>
@@ -97,10 +93,27 @@
     const volumeSlider = document.getElementById('volumeSlider');
     const shareBtn = document.getElementById('shareBtn');
     const volumeLabel = document.getElementById('volumeLabel');
+    const songTitle = document.getElementById('songTitle');
+    const songArtist = document.getElementById('songArtist');
 
     let isPlaying = false;
 
-    // Volumen guardado
+    async function fetchSongInfo() {
+      const idzeno = 'ajnldia1z5utv';
+      try {
+        const response = await fetch(`https://zenoplay.zenomedia.com/api/zenofm/nowplaying/ajnldia1z5utv?ra=${Math.random()}`);
+        const data = await response.json();
+        if (data && data.song && data.artist) {
+          songTitle.textContent = data.song;
+          songArtist.textContent = data.artist;
+        }
+      } catch (error) {
+        console.error('Error al obtener la canción:', error);
+      }
+    }
+
+    fetchSongInfo();
+
     const savedVolume = localStorage.getItem('radioVolume');
     if (savedVolume !== null) {
       audio.volume = parseFloat(savedVolume);
@@ -143,26 +156,6 @@
       }
     });
 
-    // Instalación PWA
-    let deferredPrompt;
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-      const installContainer = document.getElementById('installContainer');
-      const installBtn = document.createElement('button');
-      installBtn.textContent = 'Instalar App';
-      installBtn.className = 'bg-green-600 text-white p-3 rounded-full shadow-lg focus:outline-none';
-      installContainer.appendChild(installBtn);
-      installBtn.addEventListener('click', async () => {
-        installBtn.disabled = true;
-        deferredPrompt.prompt();
-        const choiceResult = await deferredPrompt.userChoice;
-        console.log('Resultado instalación:', choiceResult.outcome);
-        deferredPrompt = null;
-      });
-    });
-
-    // RSS Noticias
     async function fetchRSS() {
       const rssUrls = [
         'https://www.meganoticias.mx/tehuacan/rss',
@@ -185,13 +178,12 @@
         for (const url of rssUrls) {
           await loadNewsFromUrl(url);
         }
-        await new Promise(resolve => setTimeout(resolve, 120000)); // cada 2 minutos
+        await new Promise(resolve => setTimeout(resolve, 120000));
       }
     }
 
     fetchRSS();
 
-    // Estilo para marquee
     const style = document.createElement('style');
     style.innerHTML = `
       @keyframes marquee {
@@ -204,11 +196,8 @@
     `;
     document.head.appendChild(style);
 
-    // Service Worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
-        .then(() => console.log('Service Worker registrado'))
-        .catch((error) => console.log('Error en registro de Service Worker', error));
+      navigator.serviceWorker.register('/sw.js').catch(console.error);
     }
   </script>
 </body>
